Fix JDK8 build failures